updated auth login

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+VITE_APP_NAME='Felix Biwott Portfolio'
 VITE_APP_ENV='local'
 VITE_APP_BASE_API='http://react-portfolio-be.local/'
 VITE_APP_CRYPO_TINYMCE_KEY=null
