--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 VITE_APP_NAME='Felix Biwott Portfolio'
 VITE_APP_ENV='local'
-VITE_APP_BASE_API='http://react-portfolio-be.local/'
+VITE_APP_BASE_API='https://felix-port-t7bncqajdq-bq.a.run.app/'
 VITE_APP_CRYPO_TINYMCE_KEY=null
 VITE_APP_CRYPO_SECRET_KEY=dEghtNsrYere@dHmytfe
 VITE_APP_CRYPO_TINYMCE_KEY='mz1183ucpn97bk3xqa6ewok8bboqvpbk0rd9ssba16wpekvf'
